--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_BACKEND_URL=http://localhost:7000
+REACT_APP_BACKEND_URL=https://gofly-h8a3e3aecefqdedk.canadacentral-01.azurewebsites.net
 
